fixed header spacing issues

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,7 +1,7 @@
 #header {
     height: 100vh;
-    padding-top: 100px;
-    overflow: hidden;
+    padding-top: 75px;
+    /* overflow: hidden; */
     /* this hidden is causing issues */
 }
 
@@ -27,7 +27,7 @@
     gap: 0.8rem;
     position: absolute;
     left: 0;
-    bottom: 50px;
+    bottom: 30px;
 }
 
 .header-socials::after {
@@ -42,7 +42,7 @@
     height: auto;
     width: auto;
     max-width: 250px;
-    padding-top: 5%;
+    padding-top: 6%;
     margin: auto;
     bottom: 50px;
 }
@@ -54,10 +54,9 @@
 /* down arrow */
 .scroll-down {
     position: absolute;
-    right: -2.3rem;
-    bottom: 50px;
+    right: 0;
+    bottom: 30px;
     font-weight: 300;
-    font-size: 0.9rem;
 }
 
 /* media queries */
